Task-10: Fixed phone box alignment

--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,6 @@ body {
   opacity: 0.5;
 }
 
-
 .header-nav-list {
   list-style: none;
   padding: 0;
@@ -305,12 +304,26 @@ body {
   margin-top: 0;
 }
 
-/* TODO: How archive vertical align of the phone and address? */
+.header-pane section:first-of-type {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .phone-box {
   border: solid 2px var(--color-white);
   text-align: center;
   width: 270px;
   height: 45px;
+  padding-top: 7px;
+}
+
+.phone-box span {
+  font-size: 21px;
+  font-weight: bold;
+  line-height: 30px;
+  color: var(--color-red);
+  text-align: center;
 }
 
 .header-text-small {
@@ -318,17 +331,7 @@ body {
   font-size: 14px;
   line-height: 24px;
   color: var(--color-greydark2);
-}
-
-.phone-text {
-  font-size: 21px;
-  font-weight: bold;
-  line-height: 30px;
-  color: var(--color-red);
-  text-align: center;
-
-  outline: dashed 1px green;
-  outline-offset: -1px;
+  margin-top: 3px;
 }
 
 .account-nav {
